<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        android:background="@color/white"
        tools:context=".ui.fragments.TransportTVFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@color/red"
                        android:backgroundTint="@color/red"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/all"
                            android:textSize="15dp"
                            android:textColor="@color/white"
                            android:layout_gravity="center"
                            android:background="@color/red"
                            android:backgroundTint="@color/red"
                            android:padding="10dp" />


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"

                        android:backgroundTint="@color/red"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/latest_news"
                            android:textSize="15dp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:background="@color/white"
                            android:backgroundTint="@color/white"
                            android:padding="10dp" />


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@color/red"
                        android:backgroundTint="@color/red"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/breaking_news"
                            android:textSize="15dp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:background="@color/white"
                            android:backgroundTint="@color/white"
                            android:padding="10dp" />


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@color/red"
                        android:backgroundTint="@color/red"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gt_road_news"
                            android:textSize="15dp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:background="@color/white"
                            android:backgroundTint="@color/white"
                            android:padding="10dp" />


                    </androidx.cardview.widget.CardView>


                </LinearLayout>


            </HorizontalScrollView>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/video_recycler">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>


        </LinearLayout>
    </FrameLayout>
</layout>